# UAV_NAV_ROS

./: .gitignore  CUSTOM_MESSAGE_GUIDE.md  EKF2_PROMPT.md  README.md  bno085.py  requirements.txt
ekf2_estimator/: package.xml  setup.cfg  setup.py
ekf2_estimator/config/: params.yaml
ekf2_estimator/ekf2_estimator/: ekf2_core.py  ekf2_node.py  ekf2_states.py  fault_detection.py  frames.py
gps_zoe_m8q_driver/: package.xml  setup.cfg  setup.py
gps_zoe_m8q_driver/config/: params.yaml
gps_zoe_m8q_driver/gps_zoe_m8q_driver/: gps_zoe_m8q_node.py  ubx_i2c.py  ubx_nav_pvt.py
imu_bmx160_driver/: package.xml  setup.cfg  setup.py
imu_bmx160_driver/config/: params.yaml
imu_bmx160_driver/imu_bmx160_driver/: bmx160_i2c.py  imu_bmx160_driver_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: gps_driver.launch.py  imu_driver.launch.py  uav_state_estimation.launch.py
log/: latest_build  latest_test  latest_test-result
recordings/: export_mcap.py
recordings/plotters/: gps_fix.py  gps_vel.py  odom.py
scripts/: validate_configs.py  verify_nodes.py
src/bmx160_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/bmx160_ros/bmx160_ros/: bmx160_lib.py  bmx160_node.py  mag_cal_node.py
src/bmx160_ros/config/: bmx160.yaml  config.yaml
src/bmx160_ros/include/bmx160_ros/: bmx160.hpp
src/bmx160_ros/launch/: bmx160.launch.py
src/bmx160_ros/src/: bmx160.cpp  bmx160_node.cpp
src/bno085_ros/: README.md  package.xml  setup.cfg  setup.py
src/bno085_ros/bno085_ros/: __init__.py  bno085_lib.py  bno085_node.py
src/bno085_ros/config/: bno085.yaml
src/bno085_ros/launch/: bno085.launch.py
src/calibration/: README.md  package.xml  setup.py
src/calibration/calibration/: mag_calibration.py
src/calibration/config/: mag_cal_config.yaml  mag_calibration.yaml
src/calibration/descriptor/: mag_calibration.yaml
src/calibration/launch/: mag.launch.py  mag.launch.yaml  mag_calibration.launch.yaml
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: FlightMode.msg  RcChannels.msg
src/debug_ros/: package.xml  setup.cfg  setup.py
src/debug_ros/debug_ros/: odom_logger_node.py  topic_analysis_node.py
src/ekf2_estimator/: README_HYBRID_EKF.md  package.xml  setup.py
src/ekf2_estimator/config/: ekf2_params.yaml
src/ekf2_estimator/ekf2_estimator/: ekf_core.py  ekf_node.py  plot_orientation.py  test.py  utils.py
src/ekf2_estimator/launch/: ekf_estimator.launch.py
src/ekf2_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ekf2_ros/config/: ekf2_params.yaml
src/ekf2_ros/ekf2_ros/: ekf_node.py  utils.py
src/ekf2_ros/include/ekf2_ros/: ekf_core.hpp  utils.hpp
src/ekf2_ros/launch/: ekf_estimator.launch.py
src/ekf2_ros/src/: ekf_node.cpp
src/ekf_estimator/: README.md  package.xml  setup.cfg  setup.py
src/ekf_estimator/config/: ekf_config.yaml
src/ekf_estimator/descriptor/: ekf_node.yaml
src/ekf_estimator/ekf_estimator/: ekf_core.py  ekf_node.py  plot_orientation.py
src/ekf_estimator/launch/: ekf_estimator.launch.py
src/extra_nodes/: README.md  package.xml  setup.cfg  setup.py
src/extra_nodes/config/: analyzer_params.yaml  plot_orientation.yaml
src/extra_nodes/descriptor/: odom_logger_node.yaml  plot_orientation.yaml  topic_analysis_node.yaml
src/extra_nodes/extra_nodes/: gyro_integrator.py  imu_fusion_test.py  odom_logger_node.py  plot_orientation.py  topic_analysis_node.py
src/extra_nodes/launch/: plot_orientation.launch.yaml
src/fastapi_bridge/: API_DOCS.md  package.xml  setup.cfg  setup.py
src/fastapi_bridge/config/: api_bridge.yaml  bridge_node.yaml
src/fastapi_bridge/docs/: appendix.md  getting-started.md  integration-examples.md  parameters-reference.md  troubleshooting.md  workflows.md
src/fastapi_bridge/fastapi_bridge/: api_bridge.py  bridge_node.py
src/fastapi_bridge/launch/: api_bridge.launch.yaml  bridge_node.launch.yaml
src/launch/: ekf_estimator.launch.py  uav_nav.launch.py  uav_nav.launch.yaml  uav_system.launch.py
src/lidar_lite_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/lidar_lite_ros/config/: config.yaml
src/lidar_lite_ros/include/lidar_lite_ros/: lidar_lite.hpp
src/lidar_lite_ros/launch/: lidar_lite.launch.py
src/lidar_lite_ros/lidar_lite_ros/: lidar_lite_lib.py  lidar_lite_node.py
src/lidar_lite_ros/src/: lidar_lite.cpp  lidar_lite_node.cpp
src/rc_control/: README.md  package.xml  setup.cfg  setup.py
src/rc_control/config/: rc_control.yaml  rc_control_config.yaml
src/rc_control/descriptor/: rc_control.yaml
src/rc_control/launch/: rc_control.launch.py  rc_control.launch.yaml
src/rc_control/rc_control/: rc_control.py
src/rc_control_ros/: README.md  package.xml  setup.cfg  setup.py
src/rc_control_ros/config/: rc_params.yaml
src/rc_control_ros/descriptor/: rc_reader_node.yaml
src/rc_control_ros/launch/: rc_control.launch.py
src/rc_control_ros/rc_control_ros/: rc_reader_node.py
src/sensor_fusion/: README.md  package.xml  setup.py
src/sensor_fusion/config/: sensor_fusion.yaml  sensor_fusion_config.yaml
src/sensor_fusion/descriptor/: sensor_fusion.yaml
src/sensors/: README.md  package.xml  setup.py
src/servo_control/: README.md  package.xml  setup.py
src/servo_control/config/: servo_control.yaml  servo_control_config.yaml
src/servo_control/descriptor/: servo_control.yaml
src/servo_control/launch/: servo_control.launch.py  servo_control.launch.yaml
src/servo_control/servo_control/: servo_control.py
src/servo_control_ros/: README.md  package.xml  setup.cfg  setup.py
src/topic_analyzer/: package.xml  setup.cfg  setup.py
src/topic_analyzer_ros/: package.xml  setup.cfg  setup.py
src/zoe_m8q_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/zoe_m8q_ros/config/: zoe_m8q.yaml
src/zoe_m8q_ros/include/zoe_m8q_ros/: ubx.hpp  zoe_m8q.hpp
src/zoe_m8q_ros/launch/: zoe_m8q.launch.py
src/zoe_m8q_ros/src/: zoe_m8q.cpp  zoe_m8q_node.cpp
src/zoe_m8q_ros/zoe_m8q_ros/: ubx_lib.py  zoe_m8q_lib.py  zoe_m8q_node.py
test_rc_tranmittor/: transmittor.py
(+82 files in other folders)
