<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_lite_ros</name>
  <version>0.0.1</version>
  <description>I2C driver for Garmin Lidar Lite v3HP</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
